knowledge/main/default/objects/Insight__c/Insight__c.object-meta.xml
<CustomObject>
    <description
  >Insights offer detailed recommendations for next best actions for clients.</description>
    <label>Insight</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>