knowledge/main/default/objects/Insight__c/fields/BuildingSavings__c.field-meta.xml
<CustomField>
    <fullName>BuildingSavings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Savings</label>
    <type>Checkbox</type>
</CustomField>