knowledge/main/default/objects/Insight__c/fields/CLUID__c.field-meta.xml
<CustomField>
    <fullName>CLUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CLUID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>