knowledge/main/default/objects/Insight__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Account</label>
    <type>Checkbox</type>
</CustomField>