knowledge/main/default/objects/Insight__c/fields/Housing__c.field-meta.xml
<CustomField>
    <fullName>Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing</label>
    <type>Checkbox</type>
</CustomField>