knowledge/main/default/objects/Insight__c/fields/InsightID__c.field-meta.xml
<CustomField>
    <fullName>InsightID__c</fullName>
    <description>Unique Databricks Redord ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Insight ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>