knowledge/main/default/objects/Insight__c/fields/InvestmentsOneTime__c.field-meta.xml
<CustomField>
    <fullName>InvestmentsOneTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investments - One-Time</label>
    <type>Checkbox</type>
</CustomField>