knowledge/main/default/objects/Insight__c/fields/InvestmentsRegular__c.field-meta.xml
<CustomField>
    <fullName>InvestmentsRegular__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investments - Regular</label>
    <type>Checkbox</type>
</CustomField>