knowledge/main/default/objects/Insight__c/fields/LifeInsurance__c.field-meta.xml
<CustomField>
    <fullName>LifeInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life Insurance</label>
    <type>Checkbox</type>
</CustomField>