knowledge/main/default/objects/Insight__c/fields/Loans__c.field-meta.xml
<CustomField>
    <fullName>Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loans</label>
    <type>Checkbox</type>
</CustomField>