knowledge/main/default/objects/Insight__c/fields/NonLifeInsurance__c.field-meta.xml
<CustomField>
    <fullName>NonLifeInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Life Insurance</label>
    <type>Checkbox</type>
</CustomField>