knowledge/main/default/objects/Insight__c/fields/Pension__c.field-meta.xml
<CustomField>
    <fullName>Pension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pension</label>
    <type>Checkbox</type>
</CustomField>