knowledge/main/default/objects/Insight__c/fields/Revolvings__c.field-meta.xml
<CustomField>
    <fullName>Revolvings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revolvings</label>
    <type>Checkbox</type>
</CustomField>