knowledge/main/default/objects/Insight__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>